# NSF-CoT

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: hummingbird.json  qasc_evaporation.json
nsfcot/: __init__.py  attribution.py  backends.py  config.py  data.py  llm_judge.py  logic.py  parsing.py  pipeline.py  pruning.py  scoring.py  smt_verifier.py  verification.py
scripts/: run_demo.py  run_eval.py
tests/: test_pipeline.py  test_smt.py
